# pdf_rename

./: README.md  pyproject.toml
.github/workflows/: main.yml
pdfrename/: extract_titles.py  main.py
