[tool.poetry]
name = "pdfrename"
version = "0.1.0"
description = ""
authors = ["Felix Warmuth <felix.warmut@mailbox.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pdfrw = "^0.4"
click = "^8.1.3"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdfrename = "pdfrename.main:main"